crates/ferromark/tests/snapshots/renderer/blockquote_nested.snap
---
source: crates/ferromark/tests/snapshot_render.rs
assertion_line: 29
description: "> outer\n>\n> > inner\n"
---
<blockquote>
<p>outer</p>
<blockquote>
<p>inner</p>
</blockquote>
</blockquote>
