crates/ferromark/tests/snapshots/renderer/external_link_adds_security_attrs.snap
---
source: crates/ferromark/tests/snapshot_render.rs
assertion_line: 29
description: "[site](https://example.com)\n"
---
<p><a href="https://example.com" target="_blank" rel="noopener noreferrer">site</a></p>
