crates/ferromark/tests/snapshots/renderer/fenced_code_with_meta_strips_meta_from_class.snap
---
source: crates/ferromark/tests/snapshot_render.rs
assertion_line: 29
description: "```ts file=main.ts\nconsole.log(1)\n```\n"
---
<pre><code class="language-ts">console.log(1)
</code></pre>
