crates/ferromark/tests/snapshots/renderer/html_block_details_preserved_raw.snap
---
source: crates/ferromark/tests/snapshot_render.rs
assertion_line: 29
description: "<details id=\"a\">\n<summary>S</summary>\n<p>Body</p>\n</details>\n"
---
<details id="a">
<summary>S</summary>
<p>Body</p>
</details>
